tests/snapshots/parser__parse_attributes.snap
---
source: tests/parser.rs
description: "@log(\"path/to/file\") get /api"
expression: ast
---
Program(
  source: "@log(\"path/to/file\") get /api",
  items: [
    Attribute(
      location: Position(
        value: 0,
        line: 0,
        col: 0,
      ),
      identifier: Ok(Token(
        kind: Ident,
        text: "log",
        start: Position(
          value: 1,
          line: 0,
          col: 1,
        ),
      )),
      arguments: Some(ExpressionList(
        span: Span(
          start: Position(
            value: 4,
            line: 0,
            col: 4,
          ),
          end: Position(
            value: 20,
            line: 0,
            col: 20,
          ),
        ),
        exprs: [
          String(StringLiteral(
            raw: "\"path/to/file\"",
            value: "path/to/file",
            span: Span(
              start: Position(
                value: 5,
                line: 0,
                col: 5,
              ),
              end: Position(
                value: 19,
                line: 0,
                col: 19,
              ),
            ),
          )),
        ],
      )),
    ),
    Request(
      method: GET,
      endpoint: Pathname(Literal(
        value: "/api",
        span: Span(
          start: Position(
            value: 25,
            line: 0,
            col: 25,
          ),
          end: Position(
            value: 29,
            line: 0,
            col: 29,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Position(
          value: 21,
          line: 0,
          col: 21,
        ),
        end: Position(
          value: 29,
          line: 0,
          col: 29,
        ),
      ),
    ),
  ],
)
