tests/snapshots/parser__parse_attributes_ignoring_comments_after_them.snap
---
source: tests/parser.rs
description: "@log(\"path/to/file\") \n                // ignored\n                get /api"
expression: ast
---
Program(
  source: "@log(\"path/to/file\") \n                // ignored\n                get /api",
  items: [
    Attribute(
      location: Position(
        value: 0,
        line: 0,
        col: 0,
      ),
      identifier: Ok(Token(
        kind: Ident,
        text: "log",
        start: Position(
          value: 1,
          line: 0,
          col: 1,
        ),
      )),
      arguments: Some(ExpressionList(
        span: Span(
          start: Position(
            value: 4,
            line: 0,
            col: 4,
          ),
          end: Position(
            value: 20,
            line: 0,
            col: 20,
          ),
        ),
        exprs: [
          String(StringLiteral(
            raw: "\"path/to/file\"",
            value: "path/to/file",
            span: Span(
              start: Position(
                value: 5,
                line: 0,
                col: 5,
              ),
              end: Position(
                value: 19,
                line: 0,
                col: 19,
              ),
            ),
          )),
        ],
      )),
    ),
    LineComment(Literal(
      value: "// ignored",
      span: Span(
        start: Position(
          value: 38,
          line: 1,
          col: 16,
        ),
        end: Position(
          value: 48,
          line: 1,
          col: 26,
        ),
      ),
    )),
    Request(Request(
      method: GET,
      endpoint: Pathname(Literal(
        value: "/api",
        span: Span(
          start: Position(
            value: 69,
            line: 2,
            col: 20,
          ),
          end: Position(
            value: 73,
            line: 2,
            col: 24,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Position(
          value: 65,
          line: 2,
          col: 16,
        ),
        end: Position(
          value: 73,
          line: 2,
          col: 24,
        ),
      ),
    )),
  ],
)
