tests/snapshots/parser__parse_env_call_expression.snap
---
source: tests/parser.rs
description: "post http://localhost { header \"name\" env(\"auth\") body env(\"data\") }"
expression: ast
---
Program(
  source: "post http://localhost { header \"name\" env(\"auth\") body env(\"data\") }",
  items: [
    Request(Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Position(
            value: 5,
            line: 0,
            col: 5,
          ),
          end: Position(
            value: 20,
            line: 0,
            col: 20,
          ),
        ),
      )),
      block: Some(Block(
        statements: [
          Header(
            name: Ok(StringLiteral(
              raw: "\"name\"",
              value: "name",
              span: Span(
                start: Position(
                  value: 31,
                  line: 0,
                  col: 31,
                ),
                end: Position(
                  value: 36,
                  line: 0,
                  col: 36,
                ),
              ),
            )),
            value: Call(CallExpr(
              identifier: Ok(Token(
                kind: Ident,
                text: "env",
                start: Position(
                  value: 38,
                  line: 0,
                  col: 38,
                ),
              )),
              arguments: ExpressionList(
                span: Span(
                  start: Position(
                    value: 41,
                    line: 0,
                    col: 41,
                  ),
                  end: Position(
                    value: 48,
                    line: 0,
                    col: 48,
                  ),
                ),
                exprs: [
                  String(StringLiteral(
                    raw: "\"auth\"",
                    value: "auth",
                    span: Span(
                      start: Position(
                        value: 42,
                        line: 0,
                        col: 42,
                      ),
                      end: Position(
                        value: 47,
                        line: 0,
                        col: 47,
                      ),
                    ),
                  )),
                ],
              ),
            )),
          ),
          Body(
            value: Call(CallExpr(
              identifier: Ok(Token(
                kind: Ident,
                text: "env",
                start: Position(
                  value: 55,
                  line: 0,
                  col: 55,
                ),
              )),
              arguments: ExpressionList(
                span: Span(
                  start: Position(
                    value: 58,
                    line: 0,
                    col: 58,
                  ),
                  end: Position(
                    value: 65,
                    line: 0,
                    col: 65,
                  ),
                ),
                exprs: [
                  String(StringLiteral(
                    raw: "\"data\"",
                    value: "data",
                    span: Span(
                      start: Position(
                        value: 59,
                        line: 0,
                        col: 59,
                      ),
                      end: Position(
                        value: 64,
                        line: 0,
                        col: 64,
                      ),
                    ),
                  )),
                ],
              ),
            )),
            start: Position(
              value: 50,
              line: 0,
              col: 50,
            ),
          ),
        ],
        span: Span(
          start: Position(
            value: 22,
            line: 0,
            col: 22,
          ),
          end: Position(
            value: 67,
            line: 0,
            col: 67,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 67,
          line: 0,
          col: 67,
        ),
      ),
    )),
  ],
)
