tests/snapshots/parser__parse_get_urls-3.snap
---
source: tests/parser.rs
description: "get `${url}/api`\n        get `${env(`${uri}:8080`)}/api`\n        get `${env(\"url\")}/api`"
expression: ast
---
Program(
  source: "get `${url}/api`\n        get `${env(`${uri}:8080`)}/api`\n        get `${env(\"url\")}/api`",
  items: [
    Request(Request(
      method: GET,
      endpoint: Expr(TemplateSringLiteral(
        span: Span(
          start: Position(
            value: 4,
            line: 0,
            col: 4,
          ),
          end: Position(
            value: 15,
            line: 0,
            col: 15,
          ),
        ),
        parts: [
          ExpressionPart(Identifier(Ok(Token(
            kind: Ident,
            text: "url",
            start: Position(
              value: 7,
              line: 0,
              col: 7,
            ),
          )))),
          StringPart(StringLiteral(
            raw: "/api",
            value: "/api",
            span: Span(
              start: Position(
                value: 11,
                line: 0,
                col: 11,
              ),
              end: Position(
                value: 14,
                line: 0,
                col: 14,
              ),
            ),
          )),
        ],
      )),
      block: None,
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 15,
          line: 0,
          col: 15,
        ),
      ),
    )),
    Request(Request(
      method: GET,
      endpoint: Expr(TemplateSringLiteral(
        span: Span(
          start: Position(
            value: 29,
            line: 1,
            col: 12,
          ),
          end: Position(
            value: 55,
            line: 1,
            col: 38,
          ),
        ),
        parts: [
          ExpressionPart(Call(CallExpr(
            identifier: Ok(Token(
              kind: Ident,
              text: "env",
              start: Position(
                value: 32,
                line: 1,
                col: 15,
              ),
            )),
            arguments: ExpressionList(
              span: Span(
                start: Position(
                  value: 35,
                  line: 1,
                  col: 18,
                ),
                end: Position(
                  value: 49,
                  line: 1,
                  col: 32,
                ),
              ),
              exprs: [
                TemplateSringLiteral(
                  span: Span(
                    start: Position(
                      value: 36,
                      line: 1,
                      col: 19,
                    ),
                    end: Position(
                      value: 48,
                      line: 1,
                      col: 31,
                    ),
                  ),
                  parts: [
                    ExpressionPart(Identifier(Ok(Token(
                      kind: Ident,
                      text: "uri",
                      start: Position(
                        value: 39,
                        line: 1,
                        col: 22,
                      ),
                    )))),
                    StringPart(StringLiteral(
                      raw: ":8080",
                      value: ":8080",
                      span: Span(
                        start: Position(
                          value: 43,
                          line: 1,
                          col: 26,
                        ),
                        end: Position(
                          value: 47,
                          line: 1,
                          col: 30,
                        ),
                      ),
                    )),
                  ],
                ),
              ],
            ),
          ))),
          StringPart(StringLiteral(
            raw: "/api",
            value: "/api",
            span: Span(
              start: Position(
                value: 51,
                line: 1,
                col: 34,
              ),
              end: Position(
                value: 54,
                line: 1,
                col: 37,
              ),
            ),
          )),
        ],
      )),
      block: None,
      span: Span(
        start: Position(
          value: 25,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 55,
          line: 1,
          col: 38,
        ),
      ),
    )),
    Request(Request(
      method: GET,
      endpoint: Expr(TemplateSringLiteral(
        span: Span(
          start: Position(
            value: 69,
            line: 2,
            col: 12,
          ),
          end: Position(
            value: 87,
            line: 2,
            col: 30,
          ),
        ),
        parts: [
          ExpressionPart(Call(CallExpr(
            identifier: Ok(Token(
              kind: Ident,
              text: "env",
              start: Position(
                value: 72,
                line: 2,
                col: 15,
              ),
            )),
            arguments: ExpressionList(
              span: Span(
                start: Position(
                  value: 75,
                  line: 2,
                  col: 18,
                ),
                end: Position(
                  value: 81,
                  line: 2,
                  col: 24,
                ),
              ),
              exprs: [
                String(StringLiteral(
                  raw: "\"url\"",
                  value: "url",
                  span: Span(
                    start: Position(
                      value: 76,
                      line: 2,
                      col: 19,
                    ),
                    end: Position(
                      value: 80,
                      line: 2,
                      col: 23,
                    ),
                  ),
                )),
              ],
            ),
          ))),
          StringPart(StringLiteral(
            raw: "/api",
            value: "/api",
            span: Span(
              start: Position(
                value: 83,
                line: 2,
                col: 26,
              ),
              end: Position(
                value: 86,
                line: 2,
                col: 29,
              ),
            ),
          )),
        ],
      )),
      block: None,
      span: Span(
        start: Position(
          value: 65,
          line: 2,
          col: 8,
        ),
        end: Position(
          value: 87,
          line: 2,
          col: 30,
        ),
      ),
    )),
  ],
)
