tests/snapshots/parser__parse_get_urls.snap
---
source: tests/parser.rs
description: "get http://localhost:8080\n        get http://localhost:8080 {}"
expression: ast
---
Program(
  source: "get http://localhost:8080\n        get http://localhost:8080 {}",
  items: [
    Request(
      method: GET,
      endpoint: Url(Literal(
        value: "http://localhost:8080",
        span: Span(
          start: Position(
            value: 4,
            line: 0,
            col: 4,
          ),
          end: Position(
            value: 25,
            line: 0,
            col: 25,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 25,
          line: 0,
          col: 25,
        ),
      ),
    ),
    Request(
      method: GET,
      endpoint: Url(Literal(
        value: "http://localhost:8080",
        span: Span(
          start: Position(
            value: 38,
            line: 1,
            col: 12,
          ),
          end: Position(
            value: 59,
            line: 1,
            col: 33,
          ),
        ),
      )),
      block: Some(Block(
        statements: [],
        span: Span(
          start: Position(
            value: 60,
            line: 1,
            col: 34,
          ),
          end: Position(
            value: 61,
            line: 1,
            col: 35,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 34,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 61,
          line: 1,
          col: 35,
        ),
      ),
    ),
  ],
)
